force-app/main/default/objects/ExceptionLog__c/ExceptionLog__c.object-meta.xml
<CustomObject>
    <description>Object used to log any excpetions</description>
    <label>ExceptionLog</label>
    <nameField>
        <label>Exception Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExcpetionLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>