force-app/main/default/objects/ExceptionLog__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>Name of the class having error</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>