force-app/main/default/objects/ExceptionLog__c/fields/DebugLevel__c.field-meta.xml
<CustomField>
    <fullName>DebugLevel__c</fullName>
    <description>Debug Level Information</description>
    <label>Debug Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Debug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>