force-app/main/default/objects/ExceptionLog__c/fields/ExceptionDetails__c.field-meta.xml
<CustomField>
    <fullName>ExceptionDetails__c</fullName>
    <description>Exception Stack Trace</description>
    <label>Exception Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>