force-app/main/default/objects/ExceptionLog__c/fields/ExceptionLine__c.field-meta.xml
<CustomField>
    <fullName>ExceptionLine__c</fullName>
    <description>Exception Line</description>
    <label>Exception Line</label>
    <length>7</length>
    <type>Text</type>
</CustomField>